--- a/src/component/styles/drawer.css
+++ b/src/component/styles/drawer.css
@@ -2,6 +2,12 @@
   background-color: #888;
   border-radius: 20px;
 }
+.MuiPaper-root::-webkit-scrollbar-thumb {
+  background-color: transparent;
+}
+.MuiPaper-root::-webkit-scrollbar-track {
+  background-color: transparent;
+}
 .MuiDrawer-paper {
   width: 240px;
 }
