--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,13 @@
 ::-webkit-scrollbar{
   width: 10px;
 }
+::-webkit-scrollbar-thumb{
+  background-color: rgb(175, 47, 47);
+  border-radius: 10px;
+}
+
+@media (max-width:600px) {
+  ::-webkit-scrollbar{
+    width: 0px;
+  }
+}
