--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -4,6 +4,7 @@
   border: 1px solid #ffffff2b;
   border-radius: 20px;
   position: relative;
+  margin-right: 4px;
 }
 .header-box .boxSearch .search{
   flex-grow: 1;
